--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   flutter:
     sdk: flutter
   flame: ^1.5.0
+  flame_audio: ^1.3.5
+  shared_preferences: ^2.0.16
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -65,6 +67,8 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
     - assets/images/
+    - assets/music/
+    - assets/audio/music/bg_music.ogg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
